[package]
name = "tolk-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
tolk-syntax = { path = "../tolk-syntax" }
tree-sitter = "0.25.10"
anyhow = "1.0.100"
dashmap = "7.0.0-rc2"
log = "0.4.29"
smol_str = "0.3.5"
rustc-hash = "2.1.1"

[dev-dependencies]
expect-test = "1.5.0"
tempfile = "3.10.1"
