[package]
name = "tolk-source-map"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tycho-types = { workspace = true }
pathdiff = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
