[package]
name = "tolk-syntax"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ton-syntax = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-tolk = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
