[package]
name = "tolk-ty"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
tolk-syntax = { workspace = true }
tolk-resolver = { workspace = true }
log = { workspace = true }
smol_str = { workspace = true }
rustc-hash = { workspace = true }
