[package]
name = "tolkc"
description = "Tolk compiler crate"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ton-objs = { workspace = true, features = ["tolk"] }
ton-source-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
include_dir = { workspace = true }
rustc-hash = { workspace = true }
dunce = { workspace = true }
anyhow = { workspace = true }
tycho-types = "0.3.1"

[lints]
workspace = true
