[package]
name = "tolkfmt"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
pretty = { workspace = true }
tolk-syntax = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[lints]
workspace = true
