[package]
name = "tolkfmt"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
tolk-syntax = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
arrayvec = "0.7.6"
typed-arena = "2.0.2"
unicode-width = "0.2.0"

[dev-dependencies]
expect-test = { workspace = true }
difference = "2.0.0"

[lints]
workspace = true
