[package]
name = "ton-abi"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tycho-types = { workspace = true }
path-absolutize = { workspace = true }

[dev-dependencies]
dunce = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
