[package]
name = "ton-api"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
num-bigint = { workspace = true }
tycho-types = { workspace = true }
ton-networks = { workspace = true }
log = { workspace = true }
tvmffi = { workspace = true }

[lints]
workspace = true

[lib]
test = false
doctest = false
