[package]
name = "ton-emulator"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
tvm-ffi = { workspace = true }
ton-executor = { workspace = true }
tycho-types = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
num-traits = { workspace = true }
ton-networks = { workspace = true }
ton-api = { workspace = true }
acton-config = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
