[package]
name = "ton-executor"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ton-objs = { workspace = true, features = ["emulator"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tycho-types = { workspace = true }
rustc-hash = { workspace = true }
num-bigint = { workspace = true }
tvm-ffi = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
